// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mini ShoppingBag Components:  ActionWrapper  should match the snapshot  1`] = `
<DocumentFragment>
  .c0 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 15px;
  border-top: 1px solid #eaeaea;
}

.c0.c0 > a:first-child {
  margin-right: 1rem;
}

<div
    class="c0"
  />
</DocumentFragment>
`;

exports[`Mini ShoppingBag Components:  CartItemsContainer  should match the snapshot  1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div
    class="c0"
  />
</DocumentFragment>
`;

exports[`Mini ShoppingBag Components:  EmptyBagWrapper  should match the snapshot  1`] = `
<DocumentFragment>
  .c0 {
  height: 4.313rem;
  background-color: #f7f7f7;
  border-bottom: 0.0625rem solid #eaeaea;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
    class="c0"
  />
</DocumentFragment>
`;

exports[`Mini ShoppingBag Components:  ItemCountWrapper  should match the snapshot  1`] = `
<DocumentFragment>
  .c0.c0 {
  padding: 0.75rem 1rem;
  border-bottom: .0625rem solid #9e9e9e;
  background-color: inherit;
}

<p
    class="MuiTypography-root c0 MuiTypography-body1"
  />
</DocumentFragment>
`;

exports[`Mini ShoppingBag Components:  MiniShoppingBagContainer  should match the snapshot  1`] = `
<DocumentFragment>
  .c0 {
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #f7f7f7;
  border-radius: 0.25rem;
  width: 5.375rem;
}

<div
    class="c0"
  />
</DocumentFragment>
`;

exports[`Mini ShoppingBag Components:  PriceWrapper  should match the snapshot  1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0.5rem 1rem;
  border-bottom: .0625rem solid #9e9e9e;
  background-color: #f7f7f7;
}

<div
    class="c0"
  />
</DocumentFragment>
`;
